--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
     background-color: #36454f;
 }
 
-#header-signup {
+.header-nav {
     float: right;
 }
 
@@ -66,11 +66,11 @@ body {
     margin-left: -33%;
 }
 
-#artists-container {
+.main-container {
     margin-top:4%;
-    margin-left: 25%;
+    margin-left: 16%;
     flex-wrap: wrap;
-    max-width: 60%;
+    max-width: 70%;
 }
 
 .artist {
@@ -80,6 +80,43 @@ body {
     width:200px;
     height:200px;
     text-align: center;
+}
+
+.song {
+    width: 100%;
+    border-bottom: .5px solid #F0F0F0;
+}
+
+.playlist {
+    margin:auto;
+    background-color: white;
+    width:200px;
+    height:200px;
+    text-align: center;
+}
+
+#songs-container {
+    background-color: white;  
+}
+
+.song-title {
+    width:40%;
+    display:inline-block;
+}
+
+.song-artist {
+    width:20%;
+    display:inline-block;
+}
+
+.song-album {
+    width:20%;
+    display:inline-block;
+}
+
+.song-genre {
+    width: 15%;
+    display:inline-block;
 }
 
 .col-centered{
