--- a/style.css
+++ b/style.css
@@ -67,7 +67,7 @@ body {
 }
 
 .main-container {
-    margin-top:4%;
+	margin-top: 1%;
     margin-left: 16%;
     flex-wrap: wrap;
     max-width: 70%;
@@ -88,6 +88,10 @@ body {
     border-bottom: .5px solid #F0F0F0;
 }
 
+.song-header {
+    width: 100%;
+    border-bottom: .5px solid #F0F0F0;
+}
 .playlist {
     margin:auto;
     background-color: white;
@@ -143,3 +147,92 @@ body {
 	border: none;
 	text-align:center
 }
+.lib_button{
+	float: right;
+	background-color: green;
+	padding: 10px
+}
+#modal-backdrop {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 1000;
+  background-color: rgba(0, 0, 0, 0.85);
+}
+
+#create-modal {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: 1010;
+  overflow: scroll;
+}
+
+.hidden {
+  display: none;
+}
+
+.modal-info {
+  width: auto;
+  max-width: 600px;
+  min-width: 350px;
+  min-height: 300px;
+  margin: 40px auto;
+  background-color: #fff;
+  border-radius: 15px;
+}
+.modal-header {
+  position: relative;
+  padding: 10px 20px;
+}
+.modal-header h3 {
+  margin: 0;
+  font-size: 28px;
+}
+
+.modal-close-button {
+  position: absolute;
+  right: 10px;
+  top: 5px;
+  font-size: 24px;
+  border: none;
+  background: none;
+  padding: 0;
+  cursor: pointer;
+}
+
+.modal-body {
+  padding: 20px;
+}
+
+.modal-text{
+	float: left;
+    padding-right: 10px;
+	width: 50px;
+}
+
+.plus-button{
+    padding: 6px 3px 10px 3px;
+	font-size: 25px;
+	font-weight:900;
+	line-height: 6px;
+}
+#search-input {
+  margin-top:4%;
+  margin-left: 16%;
+  padding: 4px;
+  font-size: 16px;
+  background-color: #eee;
+  border: 1px solid #dadada;
+  border-radius: 2px;
+}
+
+#search-input:focus {
+  outline: none;
+  background-color: #fff;
+}
+
